# rbox-repo

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Magefile.go  Makefile  NFABugs.md  POLICY.md  README.md  RuleEngineSpec.md  TODO.txt  USAGE_EXAMPLES.md  analysis_do_not_share.md  cap_change.txt  check_compact  check_compact.c  check_mini  check_mini.c  check_raw  check_raw.c  check_sizeof.c  check_struct  check_struct.c  check_trans  check_trans.c  compact_memory_performance_refresh.txt  context_eject.txt  debug.txt  debug_sizes  debug_sizes.c  dfa_docs.txt  dfa_standalone_test  dfa_test_debug  dfa_test_new  dump_all  dump_all.c  dump_and_test.sh  dump_transitions.c  example-config.yaml  examples.txt  (+24 more)
c-dfa/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTROL_STRUCTURES.md  CaptureNotes.md  DFASystemNotes.md  FAILURE_HANDLING.md  FUZZING_IMPLEMENTATION_SUMMARY.md  LAYOUT_OPTIMIZATION.md  Makefile  NFA_PREMINIMIZATION.md  NFA_PREMINIMIZATION_PLAN.md  PATTERN_SYSTEM.md  QUANTIFIER_FIX_PLAN.md  README.md  SAT_ENCODING_DESIGN.md  SAT_ENCODING_IMPLEMENTATION.md  SHELL_SYNTAX_ANALYSIS.md  SUBSHELL_ANALYSIS.md  TEST_ORGANIZATION.md  UNDER_THE_HOOD.md  all_output.txt  alphabet.map  alphabet_digit_test.map  alphabet_per_char.map  build_test_patterns.sh  capture_edge_test  capture_edge_test.c  check_dfa  check_dfa.c  check_dfa_structure  check_dfa_structure.c  check_nfa_masks.sh  check_offsets  check_offsets.c  check_pattern17.sh  check_sizes.c  check_states.sh  check_structure  (+231 more)
c-dfa/cmake/: CaDiCaL.cmake  verify_build.sh
c-dfa/docs/: CaptureNotes.md  DFANotes.md  DFASystemNotes.md  GLOSSARY.md  LAYOUT_OPTIMIZATION.md  NFA_PREMINIMIZATION.md  NFA_PREMINIMIZATION_PLAN.md  PATTERN_ORDERING.md  PATTERN_SYSTEM.md  PIPELINE.md  PIPELINE_HANDLING.md  README.md  SAT_ENCODING_IMPLEMENTATION.md  SUFFIX_FACTORIZATION_ISSUES.md  TRANSITION_COMPRESSION.md  TaggedDFAMealyTransducer.md  TaggedDFATwoPhase.md  dsl_format.md  nfa_dsl.md
c-dfa/fuzz/: .gitignore  CMakeLists.txt  Makefile  README.md  bug_report_nfa_builder.md  cmd_dict.txt  dfa_eval_fuzzer.cpp  dfa_loader_fuzzer.cpp  generate_corpus.sh  generate_dfa_corpus.py  generate_dfa_corpus.sh  generate_multiline_corpus.sh  nfa_build_fuzzer.cpp  pattern_parse_fuzzer.cpp  pipeline_fuzzer.cpp  run_fuzzing_4h.sh
c-dfa/include/: cdfa_defines.h  cli.h  compat_strl.h  dfa.h  dfa_compact.h  dfa_errors.h  dfa_format.h  dfa_internal.h  dfa_types.h  multi_target_array.h  nfa.h  nfa2dfa.h  nfa_dsl.h  nfa_dsl_utils.h  pipeline.h  readonlybox.h  shell_processor.h  shell_tokenizer.h  shell_tokenizer_ext.h  shell_transform.h
c-dfa/lib/: CMakeLists.txt  build_dfa_state.c  dfa_compress.c  dfa_compress_sat.cpp  dfa_layout.c  dfa_layout.h  dfa_layout_sat.cpp  dfa_minimize.c  dfa_minimize.h  dfa_minimize_sat.cpp  multi_target_array.c  nfa2dfa.c  nfa2dfa_context.c  nfa2dfa_context.h  nfa_builder.h  nfa_builder_lib.c  nfa_capture.c  nfa_construct.c  nfa_parser.c  nfa_preminimize.c  nfa_preminimize.h  nfa_preminimize_sat.cpp  nfa_preminimize_sat_optimal.cpp  nfa_validate.c  pattern_order.c  pipeline.c
c-dfa/lib_eval/: CMakeLists.txt  dfa_eval.c
c-dfa/patterns/: README.md  stress_test.txt
c-dfa/src/: comprehensive_test.c  debug_cat  debug_cat.c  debug_test.c  dfa_acceptance_test  dfa_acceptance_test.c  dfa_bench.c  dfa_eval.c  dfa_extended_tests.c  dfa_loader.c  dfa_machine.c  dfa_test  dfa_test.c  dfa_test_expanded_fixed.c  dfa_test_tripled.c  extended_test.c  meson.build  minimal_test.c  pipeline_test.c  readonlybox.c  separation_test.c  shell_processor.c  shell_tokenizer.c  shell_tokenizer_ext.c  shell_tokenizer_test.c  shell_transform.c  simple_capture_test  specific_test.c  test_color_auto  test_color_auto.c  test_git  test_git.c  test_phase1.c  test_quant_single.c  test_simple  test_simple.c  test_single  test_single.c  test_single_quant  test_trace  (+2 more)
c-dfa/test_output/: alphabet.map  readonlybox_alphabet_v2.dfa  readonlybox_alphabet_v2.nfa  readonlybox_alphabet_v4.dfa  readonlybox_alphabet_v5.dfa  readonlybox_alphabet_v8.dfa  readonlybox_final.nfa
c-dfa/test_patterns/: 01_plus_literal.txt  02_star_literal.txt  03_question_literal.txt  04_plus_fragment.txt  05_plus_multichar.txt  06_alternation_plus.txt  07_alternation_star.txt  08_alternation_question.txt  09_nested_plus.txt  10_multiple_quantifiers.txt  11_combined_quantifiers.txt  12_all_optional.txt  13_char_class_plus.txt  14_wildcard.txt  15_posix_alpha.txt
c-dfa/testgen/: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  command_utils.cpp  command_utils.h  edge_case_gen.cpp  edge_case_gen.h  expectation_gen.cpp  expectation_gen.h  inductive_builder.cpp  inductive_builder.h  main.cpp  pattern_factorization.cpp  pattern_factorization.h  pattern_matcher.cpp  pattern_matcher.h  pattern_serializer.cpp  pattern_serializer.h  pattern_strategies.cpp  pattern_strategies.h  testgen.cpp  testgen.h  testgen_core.cpp  testgen_core.h  testgen_expectation_test.cpp  testgen_factorization_test.cpp  testgen_inductive_builder_test.cpp  testgen_mutation_tree.cpp  testgen_mutation_tree.h  testgen_operators.cpp  testgen_operators.h  testgen_pattern_matcher_fuzz.cpp  testgen_pattern_matcher_test.cpp  testgen_serializer_test.cpp  testgen_strategies_test.cpp  testgen_test.cpp  testgen_validation_test.cpp  validation_helpers.cpp  (+1 more)
c-dfa/tests/: .gitignore  CMakeLists.txt  README.md  bug_complex_optional.txt  bug_nfa2dfa_segfault.txt  dfa_test.c  eval_test_patterns.txt  golden_utils.c  golden_utils.h  pattern_bug_eq_fragment.txt  regression_eq_fragment.sh  regression_nfa2dfa_segfault.sh  regression_test.c  run_test_suite.py  test_binary_format.sh  test_capture_e2e.c  test_captures.sh  test_dfa2c_array.sh  test_eval_only.c  test_library_api.c  test_minimize_integrity.c  test_nfa_dsl.c  test_parser.c  test_preminimize.c  (+2 more)
draugr/: .gitignore  CMakeLists.txt
rbox-protocol/: .gitignore  CMakeLists.txt  Makefile  PLAN.md  build-asan.sh  build-tsan.sh  gitdiffstaqed.txt  lib  merged-proto.txt  run-tests.sh
rbox-ruleset/: CMakeLists.txt  Makefile  README.md
shellgate/: .gitignore  CMakeLists.txt
(+1573 files in other folders)
